# nexsock2

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
nexsock-protocol-core/: Cargo.toml
nexsock-protocol-core/benches/: header_parsing.rs
nexsock-protocol-core/src/: constants.rs  error.rs  frame.rs  lib.rs  message_flags.rs  transport.rs
nexsock-protocol-core/src/header/: mod.rs  optimized.rs  simd.rs  standard.rs
nexsock-protocol-core/src/traits/: header.rs  mod.rs
