[workspace]
resolver = "3"
members = ["nexsock-protocol-core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Emil Schütt <emil.schutt@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/retrokiller543/nexsock2"
repository = "https://github.com/retrokiller543/nexsock2"

[workspace.dependencies]
tikv-jemallocator = "0.6.0"
tokio = { version = "1.44", features = ["full", "parking_lot"] }
bytes = "1.10"
futures = "0.3"
bincode = { version =  "2.0.1", features = ["derive"] }
thiserror = { version = "2.0.12", features = ["default"]}

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
