[package]
name = "nexsock-protocol-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tikv-jemallocator.workspace = true
tokio.workspace = true
bytes.workspace = true
futures.workspace = true
bincode.workspace = true
thiserror.workspace = true
tokio-util = "0.7.14"

[dev-dependencies]
criterion = "0.5.1"

[features]
default = []
simd = []

[[bench]]
name = "header_parsing"
harness = false
required-features = ["simd"]
